[fix] correct width scaling and grid collapse

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,9 @@ html {
     -webkit-text-size-adjust: 100%;
     -moz-tab-size: 4;
     tab-size: 4;
-    width: 100%;
+    min-width: 100dvw;
     height: 100%;
+    overflow: auto;
 }
 
 img {
@@ -48,11 +49,13 @@ img {
 
 a {
     text-decoration: none;
+    color: #61dc75;
 }
 
 a:visited {
-    color: inherit;
+    color: #c988f7;
 }
+
 input:invalid {
     background: rgba(255, 0, 0, 0.205);
 }
@@ -64,8 +67,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    max-width: 100dvw;
-    min-height: 100dvh;
+    min-width: 700px;
 }
 
 header {
@@ -85,14 +87,14 @@ main {
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: center;
-    width: 100%;
     min-height: 100dvh;
+    width: 100%;
     max-height: fit-content;
     padding: 2% 0;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    flex-direction: column;
 }
 
 footer {
@@ -130,7 +132,8 @@ footer {
 }
 
 #login-form {
-    width: clamp(600px, 50%, 900px);
+    outline: 1px solid red;
+    width: clamp(700px, 60%, 1200px);
     height: fit-content;
     margin: 5% 0;
     padding: 20px 5px 50px 5px;
@@ -142,8 +145,9 @@ footer {
     justify-content: center;
     flex-direction: column;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-shadow: 0 0 1.2rem var(--main-font-shadow) !important; /* Important is tagged to overwrite possible readability assistant */
-    border-radius: 5px; 
+    text-shadow: 0 0 1.2rem var(--main-font-shadow) !important;
+    /* Important is tagged to overwrite possible readability assistant */
+    border-radius: 5px;
     background: #3b3b3b34;
 }
 
@@ -155,27 +159,35 @@ footer {
 }
 
 #form-container {
+    outline: 1px solid green;
     padding: 10px;
-    width: clamp(300px, 520px, 90%); /* 300px = grid-item, 520px two grid-items, 90% of the container width */
+    max-width: 600px;
+    /* 300px = grid-item, 520px two grid-items, 90% of the container width */
     height: min(fit-content, 40%);
 }
+
 #form {
     padding: 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr)); /* Adjusted to minmax */
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    /* Adjusted to minmax */
     align-items: center;
     justify-content: center;
     gap: 10px;
 }
+
 .grid-item {
     padding: 5px;
     margin-bottom: 10px;
+    min-width: 300px;
 }
+
 .form-legend {
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.911);
     margin-bottom: 5px;
     margin-left: 10px;
 }
+
 .form-input {
     width: 100%;
     border-radius: 6px;
@@ -189,40 +201,60 @@ footer {
     text-shadow: 0 0 3px var(--main-font-shadow);
     margin-bottom: 5px;
 }
+
 .input-small {
     width: 90%;
     min-height: 20px;
     margin-left: 10px;
     text-shadow: 0 0 3px var(--main-font-shadow);
 }
+
 .form-input::placeholder {
     color: rgb(197, 197, 197);
 }
-.form-input:focus{
+
+.form-input:focus {
     transform: scale(1.05);
     outline: 2px solid #e3b261;
     background: white;
     color: rgb(32, 32, 32);
     text-shadow: none;
 }
+
 #submit-grid-box {
     padding: 20px 10px;
     justify-self: center;
-    grid-column: span 2; /*Uses @media to span to a single column when the width is lower than 900px*/
+    grid-column: span 2;
+    /*Uses @media to span to a single column when the width is lower than 900px*/
 }
+
 #submit-btn {
     font-size: 1.1rem;
     padding: 10px 20px;
     font-weight: 500;
-    background: green;
+    background: #2f5a28;
+    box-shadow: 2px 2px 10px var(--item-shadow);
+    border-radius: 5px;
+    color: white;
+    border: none;
+}
 
+#odin-outline-logo {
+    background: -moz-radial-gradient(circle, rgba(1, 0, 11, 1) 7%, rgba(45, 51, 69, 0) 100%);
+    background: -webkit-radial-gradient(circle, rgba(1, 0, 11, 1) 7%, rgba(45, 51, 69, 0) 100%);
+    background: radial-gradient(circle, rgba(1, 0, 11, 1) 7%, rgba(45, 51, 69, 0) 100%);
 }
 
 .block {
     display: block;
 }
-@media screen and (max-width: 570px) {
+.center-aligned {
+    text-align: center;
+}
+
+@media screen and (max-width: 780px) {
     #submit-grid-box {
-      grid-column: span 1; /* Change to span 1 for smaller screens */
+        grid-column: span 1;
+        /* Change to span 1 for smaller screens */
     }
-  }
+}
